tests/compile_pass/public_headers/core_concepts.cpp
#include <pb/core/concepts.hpp>

int pb_public_header_core_concepts() { return 0; }
